syntax = "proto3";

package libraryService;

option go_package = "./;libraryService";

import "author_messages.proto";


service writerService {
  rpc CreateAuthor(CreateAuthorReq) returns (CreateAuthorRes);
}