syntax = "proto3";

import "google/protobuf/timestamp.proto";

package kafkaMessages;

option go_package = "./;kafkaMessages";


message ProductCreate {
  string ProductID = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
}

message ProductUpdate {
  string ProductID = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
}

message Product {
  string ProductID = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
  google.protobuf.Timestamp CreatedAt = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
}

message ProductCreated {
  Product Product = 1;
}

message ProductUpdated {
  Product Product = 1;
}

message ProductDelete {
  string ProductID = 1;
}

message ProductDeleted {
  string ProductID = 1;
}

message AuthorCreate {
  string ID = 1;
  string Name = 2;
  string Bio = 3;
  int64  Birthday = 4;
//  google.protobuf.Timestamp Birthday = 4;
}

message Author {
  string ID = 1;
  string Name = 2;
  string Bio = 3;
  google.protobuf.Timestamp Birthday = 4;
  google.protobuf.Timestamp CreatedAt = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
}

message AuthorCreated {
  Author Author = 1;
}